--- a/src/styles/components/modal.sass
+++ b/src/styles/components/modal.sass
@@ -7,8 +7,10 @@
 		color: $color6
 		background: transparent url('../img/bg-modal.png') center center no-repeat
 		background-size: 100% 100%
+		border-radius: 0
 		box-shadow: none
 		+sm
+			box-shadow: none
 			padding: 80px 20px 0
 			background-image: linear-gradient(-191deg, #1e14a8 0%, $color3 100%)
 	
@@ -19,6 +21,7 @@
 			max-width: 335px
 			margin-left: auto
 			margin-right: auto
+			padding-bottom: 120px
 	
 	&__close
 		position: absolute
