--- a/src/styles/pages/home/chat.sass
+++ b/src/styles/pages/home/chat.sass
@@ -167,10 +167,12 @@
 					color: $color6
 					background-color: $color4
 					border-radius: 27px
+					display: block
 					+sm
+						+paragraph-text
 						font-size: 16px
-						line-height: 1
-						padding: 6px 50px 6px 15px
+						line-height: 24px
+						padding: 8px 50px 6px 15px
 					+placeholder(rgba($color6, .2))
 						+trs
 					.no-touch &:hover,
