--- a/src/template/pages/home/how.pug
+++ b/src/template/pages/home/how.pug
@@ -82,8 +82,8 @@
 		path#path-how-6(d='M57.080,106.431 C143.768,78.887 167.116,-9.028 299.453,0.756 C442.448,11.325 454.420,172.418 427.577,247.408 C388.906,355.439 196.964,394.817 86.711,321.656 C-23.544,248.488 -23.202,131.941 57.080,106.431 Z')
 
 	+e.container.container
-		+e.title Как это работает
-		+e.text Любая продажа строится на коммуникациях с клиентом, будь то знакомство с продуктом, представление новых функций или поддержка. Мы выводим процесс коммуникаций с клиентом инновационный уровень, разрабатвая боты под популярные/следующие платформы:
+		+e.H2.title Как это работает
+		+e.P.text Любая продажа строится на коммуникациях с клиентом, будь то знакомство с продуктом, представление новых функций или поддержка. Мы выводим процесс коммуникаций с клиентом инновационный уровень, разрабатвая боты под популярные/следующие платформы:
 
 		+e.soc
 			-socList = ['facebook', 'telegram', 'viber', 'skype', 'slack', 'insta']
@@ -107,45 +107,45 @@
 				+e.history-number
 					+i('01')
 				+e.history-content
-					+e.history-title Идея бота
-					+e.history-text Определение направлений и функций, где бот будет полезен для ваших клиентов.
+					+e.H3.history-title Идея бота
+					+e.P.history-text Определение направлений и функций, где бот будет полезен для ваших клиентов.
 
 			+e.history-el_2
 				+e.history-canvas
 				+e.history-number
 					+i('02')
 				+e.history-content
-					+e.history-title Сценарий разработки
-					+e.history-text Определение направлений и функций, где бот будет полезен для ваших клиентов.
+					+e.H3.history-title Сценарий разработки
+					+e.P.history-text Определение направлений и функций, где бот будет полезен для ваших клиентов.
 
 			+e.history-el_3
 				+e.history-canvas
 				+e.history-number
 					+i('03')
 				+e.history-content
-					+e.history-title Подключение модулей
-					+e.history-text Определение направлений и функций, где бот будет полезен для ваших клиентов.
+					+e.H3.history-title Подключение модулей
+					+e.P.history-text Определение направлений и функций, где бот будет полезен для ваших клиентов.
 
 			+e.history-el_4
 				+e.history-canvas
 				+e.history-number
 					+i('04')
 				+e.history-content
-					+e.history-title Тестирование
-					+e.history-text Определение направлений и функций, где бот будет полезен для ваших клиентов.
+					+e.H3.history-title Тестирование
+					+e.P.history-text Определение направлений и функций, где бот будет полезен для ваших клиентов.
 
 			+e.history-el_5
 				+e.history-canvas
 				+e.history-number
 					+i('05')
 				+e.history-content
-					+e.history-title Публикация бота на странице Facebook
-					+e.history-text Определение направлений и функций, где бот будет полезен для ваших клиентов.
+					+e.H3.history-title Публикация бота на странице Facebook
+					+e.P.history-text Определение направлений и функций, где бот будет полезен для ваших клиентов.
 
 			+e.history-el_6
 				+e.history-canvas
 				+e.history-number
 					+i('06')
 				+e.history-content
-					+e.history-title Профит
-					+e.history-text Определение направлений и функций, где бот будет полезен для ваших клиентов.
+					+e.H3.history-title Профит
+					+e.P.history-text Определение направлений и функций, где бот будет полезен для ваших клиентов.
