--- a/src/template/pages/home/loc.pug
+++ b/src/template/pages/home/loc.pug
@@ -1,7 +1,7 @@
 +b.SECTION.loc#loc(data-scroll-section)
 	div(data-line)
 	+e.container.container
-		+e.title Где это работает
+		+e.H2.title Где это работает
 
 		+e.slider-wrap
 			+e.slider-counter
@@ -19,8 +19,8 @@
 				+e.slider-item
 					+e.slider-row
 						+e.slider-left
-							+e.slider-title Новостные агенства
-							+e.slider-text CNN, Forbes, TechCrunch имеют своих чат-ботов. Возможные сценарии: отправка новостей, подписка на новости, поиск новости по тегу. Боты отправляют текстовый, графический и видео контент. Возможно получение новостей от подписчиков.
+							+e.H3.slider-title Новостные агенства
+							+e.P.slider-text CNN, Forbes, TechCrunch имеют своих чат-ботов. Возможные сценарии: отправка новостей, подписка на новости, поиск новости по тегу. Боты отправляют текстовый, графический и видео контент. Возможно получение новостей от подписчиков.
 						+e.slider-right
 							+e.slider-image
 								+e.IMG.slider-img(src='static/img/content/loc-slider-1.jpg' alt='image')
@@ -30,8 +30,8 @@
 				+e.slider-item
 					+e.slider-row
 						+e.slider-left
-							+e.slider-title Новостные агенства и популярные агенства
-							+e.slider-text CNN, Forbes, TechCrunch имеют своих чат-ботов.
+							+e.H3.slider-title Новостные агенства и популярные агенства
+							+e.P.slider-text CNN, Forbes, TechCrunch имеют своих чат-ботов.
 						+e.slider-right
 							+e.slider-image
 								+e.IMG.slider-img(src='static/img/content/loc-slider-2.jpg' alt='image')
@@ -41,8 +41,8 @@
 				+e.slider-item
 					+e.slider-row
 						+e.slider-left
-							+e.slider-title Новостные агенства будущего
-							+e.slider-text CNN, Forbes, TechCrunch имеют своих чат-ботов. Возможные сценарии: отправка новостей, подписка на новости, поиск новости по тегу.
+							+e.H3.slider-title Новостные агенства будущего
+							+e.P.slider-text CNN, Forbes, TechCrunch имеют своих чат-ботов. Возможные сценарии: отправка новостей, подписка на новости, поиск новости по тегу.
 						+e.slider-right
 							+e.slider-image
 								+e.IMG.slider-img(src='static/img/content/loc-slider-3.jpg' alt='image')
