--- a/src/template/pages/home/screen.pug
+++ b/src/template/pages/home/screen.pug
@@ -3,8 +3,8 @@
 	+e.content
 		+e.container.container
 			+e.content-in
-				+e.title НОВЫЙ ИНСТРУМЕНТ ПОСТРОЕНИЯ КОММУНИКАЦИЙ С ПОТРЕБИТЕЛЕМ
-				+e.text Разрабатываем практичные решения, которые соответствуют целям наших клиентов, развивают городскую среду и увеличивают ценность проекта.
+				+e.H1.title НОВЫЙ ИНСТРУМЕНТ ПОСТРОЕНИЯ КОММУНИКАЦИЙ С ПОТРЕБИТЕЛЕМ
+				+e.P.text Разрабатываем практичные решения, которые соответствуют целям наших клиентов, развивают городскую среду и увеличивают ценность проекта.
 				+e.btn-wrap
 					-btnClass = '_default __btn js-chat-init'
 					-btnText = 'Начать чат с ботом'
