--- a/src/template/pages/home/top.pug
+++ b/src/template/pages/home/top.pug
@@ -1,7 +1,7 @@
 +b.SECTION.top#top(data-scroll-section)
 	div(data-line)
 	+e.container.container
-		+e.title(data-text-mobile='Статьи о ботах') Интересные статьи о ботах
+		+e.H2.title(data-text-mobile='Статьи о ботах') Интересные статьи о ботах
 		-
 			topList = [[
 			'10 причин, по которым чат-боты – это будущее мобильных приложений для смартфонов',
@@ -24,8 +24,8 @@
 							+e.IMG.image-img(src=`static/img/content/loc-slider-${index + 1}.jpg` alt='image')
 							+e.SVG.image-svg(viewBox="0 0 300 219" preserveAspectRatio='none')
 								path(d='M-2,-2v223h304V-2H-2z M271.8,169.7c-46.3,39.6-168.4,77.1-231.1,16.5C-22.1,125.6,0.3,79.1,45.9,50C91.6,20.9,179.8-29,242,25.1C304.2,79.2,318.2,130.1,271.8,169.7z')
-						+e.DIV.title= el[0]
-						+e.DIV.text= el[1]
+						+e.H3.DIV.title= el[0]
+						+e.P.DIV.text= el[1]
 						+e.DIV.more
 							+e.DIV.more-dot
 							+e.DIV.more-dot
