--- a/src/styles/pages/home/how.sass
+++ b/src/styles/pages/home/how.sass
@@ -28,7 +28,7 @@
 				z-index: 0
 				background-image: linear-gradient(-18deg, #1e14a8 0%, #50218e 56%, #50218e 100%)
 				+sm
-					background-image: linear-gradient(-54deg, $color2 0%, #50218e 100%)
+					background-image: linear-gradient(32deg, $color2 0%, $color3 100%)
 			&:nth-child(2)
 				z-index: -1
 				margin-top: -50px
