--- a/src/styles/pages/home/screen.sass
+++ b/src/styles/pages/home/screen.sass
@@ -5,8 +5,6 @@
 	background-image: linear-gradient(-187deg, #1e14a8 0%, #50218e 56%, #50218e 100%)
 	min-height: 320px
 	+gpu
-	+sm
-		background-image: linear-gradient(-144deg, $color2 0%, $color3 100%)
 	+only-tab
 		z-index: 2
 		&:after
@@ -15,16 +13,17 @@
 			+ratio-in
 			z-index: 0
 			bottom: -200px
-			background: url('../img/bg-screen-tablet-1.png') 30px 69px no-repeat, url('../img/bg-screen-tablet-2.png') calc(100vw - 260px) -155px no-repeat, url('../img/bg-screen-tablet-3.png') calc(100vw - 210px) 50vh no-repeat, url('../img/bg-screen-tablet-4.png') -170px calc(50vh + 240px)  no-repeat, url('../img/bg-screen-tablet-5.png') calc(100vw - 390px) calc(100vh - 155px)  no-repeat
+			background: url('../img/bg-screen-tablet-1.png') 30px 69px no-repeat, url('../img/bg-screen-tablet-2.png') calc(100vw - 260px) -155px no-repeat, url('../img/bg-screen-tablet-3.png') calc(100vw - 210px) 50vh no-repeat, url('../img/bg-screen-tablet-4.png') -170px calc(50vh + 240px)  no-repeat, url('../img/bg-screen-tablet-5.png') calc(100vw - 385px) calc(100vh - 235px)  no-repeat
 	+sm
 		z-index: 2
+		background-image: linear-gradient(-207deg, $color2 0%, $color3 100%)
 		&:after
 			pointer-events: none
 			content: ''
 			+ratio-in
 			z-index: 0
 			bottom: 0
-			background: url('../img/bg-screen-mobile-1.png') calc(100vw - 113px) -70px no-repeat, url('../img/bg-screen-mobile-2.png') -45px 130px no-repeat, url('../img/bg-screen-mobile-3.png') calc(100vw - 55px) 310px no-repeat
+			background: url('../img/bg-screen-mobile-1.png') calc(100vw - 113px) -70px no-repeat, url('../img/bg-screen-mobile-2.png') -45px 130px no-repeat, url('../img/bg-screen-mobile-3.png') calc(100vw - 55px) 90% no-repeat
 	
 	&__canvas
 		+ratio-in
@@ -34,17 +33,25 @@
 		svg
 			display: none
 			
+	&__container
+		+sm
+			height: 100%
+		+mob-fix
+			height: auto
+	
 	&__content
 		position: relative
 		z-index: 2
 		padding-top: 197px
 		+md
-			padding-top: 253px
+			padding-top: 310px
 		+tab-fix
 			padding-top: 167px!important
 		+sm
-			padding-top: 128px
+			padding-top: 0
+			height: 100%
 		+mob-fix
+			height: auto
 			padding-top: 70px
 		&-in
 			padding: 0 100px
@@ -54,10 +61,20 @@
 				margin-right: auto
 				padding: 0
 			+sm
+				position: absolute
+				bottom: 30px
+				left: 20px
+				right: 20px
 				max-width: 420px
 				margin-left: 0
 				margin-right: 0
-			
+			+mob-fix
+				position: relative
+				top: auto
+				left: auto
+				right: auto
+				bottom: auto
+	
 	&__title
 		+h1
 		max-width: 720px
@@ -67,6 +84,7 @@
 		max-width: 660px
 		+sm
 			margin-top: 15px
+			padding-right: 30px
 		
 	&__btn
 		cursor: pointer
