--- a/src/template/pages/home/advantage.pug
+++ b/src/template/pages/home/advantage.pug
@@ -1,7 +1,7 @@
 +b.SECTION.advantage#advantage(data-scroll-section)
 	div(data-line)
 	+e.container.container
-		+e.title Наши приемущества
+		+e.H2.title Наши приемущества
 		-
 			advList = [[
 			'Целевой контент в коммуникациях',
@@ -32,5 +32,5 @@
 						+e.list-item-left
 							+i(`advantage-${index + 1}`)
 						+e.list-item-right
-							+e.list-item-title= el[0]
-					+e.list-item-text= el[1]
+							+e.H3.list-item-title= el[0]
+					+e.P.list-item-text= el[1]
