--- a/src/template/pages/home/example.pug
+++ b/src/template/pages/home/example.pug
@@ -1,7 +1,7 @@
 +b.SECTION.example#example(data-scroll-section)
 	div(data-line)
 	+e.container.container
-		+e.title Примеры работ
+		+e.H2.title Примеры работ
 
 		+e.slider-wrap
 			+e.slider-counter
@@ -16,7 +16,7 @@
 					}
 				include ../../components/btn
 			+e.slider-chat
-				+e.slider-chat-text(href='#!' data-text-mobile='Поговорить с этим ботом') Поговорить с ботом
+				+e.P.slider-chat-text(href='#!' data-text-mobile='Поговорить с этим ботом') Поговорить с ботом
 				+e.slider-chat-icon(href='#!')
 					+i('telegram')
 				+e.slider-chat-icon(href='#!')
@@ -31,7 +31,7 @@
 									path(d="M393,179.6v5.2C393,183.1,393,181.3,393,179.6z")
 									path(d="M333.6,340c-39.4,28.4-144.5,51.2-246,15C-17.4,317.5-13,184.3,23.3,120.5C59.7,56.3,50.1,0.2,113.6,0c63.8-0.2,87.8,16.4,186.5,8.9c57.2-4.3,92.4,82.6,93,170.7V0H0v373.7h393V184.8C392.7,247.9,374.3,310.7,333.6,340z")
 						+e.slider-right
-							+e.slider-title Киевский зоопарк
+							+e.H3.slider-title Киевский зоопарк
 							+e.slider-text
 								p <strong>Задача:</strong> В связи с большим количеством простых запросов от клиентов, нужно было снизить нагрузку на колл центр заведения и упростить пользователю комуникацию по интересующим его вопросам.
 								p <strong>Результат:</strong> Разработан универсальный бот для месенджера Facebook, который сизил нагрузку на колл центр на 34% в течение первых 2 месяцев после запуска.
@@ -45,8 +45,8 @@
 									path(d="M393,179.6v5.2C393,183.1,393,181.3,393,179.6z")
 									path(d="M333.6,340c-39.4,28.4-144.5,51.2-246,15C-17.4,317.5-13,184.3,23.3,120.5C59.7,56.3,50.1,0.2,113.6,0c63.8-0.2,87.8,16.4,186.5,8.9c57.2-4.3,92.4,82.6,93,170.7V0H0v373.7h393V184.8C392.7,247.9,374.3,310.7,333.6,340z")
 						+e.slider-right
-							+e.slider-title Новостные агенства и популярные агенства
-							+e.slider-text CNN, Forbes, TechCrunch имеют своих чат-ботов.
+							+e.H3.slider-title Новостные агенства и популярные агенства
+							+e.P.slider-text CNN, Forbes, TechCrunch имеют своих чат-ботов.
 
 				+e.slider-item
 					+e.slider-row
@@ -57,5 +57,5 @@
 									path(d="M393,179.6v5.2C393,183.1,393,181.3,393,179.6z")
 									path(d="M333.6,340c-39.4,28.4-144.5,51.2-246,15C-17.4,317.5-13,184.3,23.3,120.5C59.7,56.3,50.1,0.2,113.6,0c63.8-0.2,87.8,16.4,186.5,8.9c57.2-4.3,92.4,82.6,93,170.7V0H0v373.7h393V184.8C392.7,247.9,374.3,310.7,333.6,340z")
 						+e.slider-right
-							+e.slider-title Новостные агенства будущего
-							+e.slider-text CNN, Forbes, TechCrunch имеют своих чат-ботов. Возможные сценарии: отправка новостей, подписка на новости, поиск новости по тегу.
+							+e.H3.slider-title Новостные агенства будущего
+							+e.P.slider-text CNN, Forbes, TechCrunch имеют своих чат-ботов. Возможные сценарии: отправка новостей, подписка на новости, поиск новости по тегу.
