PROD (home fix)

--- a/src/styles/components/card.sass
+++ b/src/styles/components/card.sass
@@ -7,10 +7,11 @@
 	
 	&__image
 		position: relative
-		width: 300px
+		width: 299.5px
 		height: 219px
 		overflow: hidden
 		+cover-img
+		+gpu
 		img
 			position: relative
 		+sm
@@ -35,7 +36,7 @@
 			height: 100%
 			z-index: 4
 			fill: $color6
-			overflow: hidden
+			+gpu
 			
 	&__title
 		margin-top: 38px
