--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -25,7 +25,9 @@
 @import 'components/scrollbar';
 @import 'components/modal';
 @import 'components/form';
+@import 'components/breadcrumbs';
 
 /* PAGES */
 @import 'pages/home/home';
 @import 'pages/404';
+@import 'pages/contacts';
