--- a/src/template/pages/404.pug
+++ b/src/template/pages/404.pug
@@ -3,6 +3,7 @@ extends ../extend/default
 block variables
 	- var title = '404 page';
 	-footerOff = true
+	-homePage = true
 
 block main
 	main.content(data-page='404')
