--- a/src/template/pages/index.pug
+++ b/src/template/pages/index.pug
@@ -129,6 +129,11 @@ html(lang='ru')
 				'02',
 				'404',
 				'404 page'
+			], [
+				'contacts.html',
+				'02',
+				'Contacts',
+				'Contacts page'
 			]
 		];
 	header.
