PROD (header target blank moved - my bad bro)

--- a/src/template/components/header.pug
+++ b/src/template/components/header.pug
@@ -14,7 +14,7 @@
 					//li: a(href='home.html') Блог
 					li: a(href='home.html') Контакты
 
-			+e.chat(href='#!')
+			+e.chat(href='#!' target='_blank')
 				+e.chat-icon
 					+i('facebook')
 
@@ -30,4 +30,4 @@
 				+i('menu-close')
 
 			+e.mobile-chat-btn
-				a(href='#!' target='_blank') ЧАТ С БОТОМ
+				a(href='#!') ЧАТ С БОТОМ
