--- a/src/styles/partials/_helpers.sass
+++ b/src/styles/partials/_helpers.sass
@@ -44,6 +44,11 @@
 =mob-portrait
 	@media only screen and (max-width: $mob + 'px') and (orientation: portrait)
 		@content
+		
+=portrait
+	@media only screen and (orientation: portrait)
+		@content
+	
 
 /* ===================================
 	 TRANSITION
