--- a/src/template/components/footer.pug
+++ b/src/template/components/footer.pug
@@ -62,6 +62,9 @@ if !footerOff
 		+b.FOOTER.footer#footer(data-scroll-section)
 			div(data-line)
 
+			+e.map-image
+				img(src='static/img/footer-map.png' alt='image')
+
 			+e.mobile-top.js-to-top
 				+i('mobile-top')
 
