--- a/src/template/extend/default.pug
+++ b/src/template/extend/default.pug
@@ -49,4 +49,6 @@ html(lang='ru')
 
 			// Scripts
 			block scripts
+				if map
+					script(src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDk6mzEzumjkj6ppV83VxGuI5gbM-csMHc")
 				script(src='static/js/index' + suffix + '.js')
