--- a/src/template/pages/404.pug
+++ b/src/template/pages/404.pug
@@ -10,6 +10,7 @@ block main
 		+b.b-404
 			+e.bg
 				img(src='static/img/content/bg-404.jpg' alt='image')
+				img(src='static/img/content/bg-404-portrait.jpg' alt='image')
 			+e.content
 				+e.P.content-text Не ошибается только тот, кто спит.
 				+e.content-btn
