--- a/src/styles/components/common.sass
+++ b/src/styles/components/common.sass
@@ -19,6 +19,10 @@ main
 	overflow: hidden
 	.is-sub &
 		padding-top: 120px
+	&[data-page='contacts']
+		position: relative
+		z-index: 2
+		overflow: visible
 	
 	
 .container
