--- a/src/styles/components/modal.sass
+++ b/src/styles/components/modal.sass
@@ -4,12 +4,14 @@
 	.dialog
 		padding: 70px 80px 0
 		width: calc(670px + 160px)
+		min-height: 350px
 		color: $color6
 		background: transparent url('../img/bg-modal.png') center center no-repeat
 		background-size: 100% 100%
 		border-radius: 0
 		box-shadow: none
 		+sm
+			min-height: 0
 			box-shadow: none
 			padding: 80px 20px 0
 			background-image: linear-gradient(-191deg, #1e14a8 0%, $color3 100%)
