--- a/src/styles/pages/home/chat.sass
+++ b/src/styles/pages/home/chat.sass
@@ -36,7 +36,7 @@
 		+sm
 			width: 22px
 			height: 22px
-			font-size: 12px
+			font-size: 10px
 			right: auto
 			left: 20px
 	
@@ -132,22 +132,16 @@
 				+f('MullerMedium',18,24,0)
 				+sm
 					padding: 7px 15px
-					font-size: 10px
-					line-height: 14px
+					font-size: 12px
+					line-height: 16px
 					+sm
 						min-width: 110px
 						max-width: 170px
-				svg
-					&:nth-child(2)
-						top: -4px
 				.btn__bg
-					+md
-						background-color: $color4
-						border-radius: 9999px
-					&-1,
-					&-2
-						+md
-							display: none
+					&-left-dot
+						margin-left: 3px
+					&-right-dot
+						margin-right: 3px
 			&-form
 				margin-top: 15px
 				margin-bottom: 15px
@@ -222,10 +216,10 @@
 				border-radius: 27px 27px 27px 0
 				opacity: 0
 				+sm
-					padding: 10px 13px
+					padding: 10px 12px
 					max-width: 209px
-					font-size: 10px
-					line-height: 14px
+					font-size: 12px
+					line-height: 16px
 				& + &
 					margin-top: 30px
 					+sm
@@ -263,9 +257,9 @@
 				text-align: right
 				+sm
 					margin-right: 25px
-					padding: 10px 13px
-					font-size: 10px
-					line-height: 14px
+					padding: 10px 12px
+					font-size: 12px
+					line-height: 16px
 					max-width: 209px
 				& + &
 					margin-top: 30px
