--- a/src/styles/partials/_svg.scss
+++ b/src/styles/partials/_svg.scss
@@ -109,7 +109,7 @@
 .icon-menu-open {
   width: 2.43em;
   height: 1em;
-  fill: #FFF;
+  fill: currentColor;
   stroke: initial;
 }
 .icon-mobile-top {
