--- a/src/styles/pages/contacts.sass
+++ b/src/styles/pages/contacts.sass
@@ -1,12 +1,23 @@
 .contacts
-	padding-bottom: 200px
+	padding-bottom: 10px
+	+mac
+		padding-bottom: 30px
 	&__title
 		+h2
 		
 	&__row
 		display: flex
+		min-height: 320px
+		+md
+			display: block
 		
 	&__col
+		flex: 1 0 auto
+		&_left
+			flex-basis: 430px
+			max-width: 430px
+		&_right
+			position: relative
 	
 	&__list
 		position: relative
@@ -27,15 +38,16 @@
 			.no-touch &:hover
 				color: $color4
 		&-col
-			padding-right: 38px
-			max-width: 50%
 			+sm
 				max-width: none
 				margin-left: 149px
 				padding-right: 0
 				order: 1
 			&:nth-child(1)
+				width: 230px
+				padding-right: 15px
 				+sm
+					width: auto
 					margin-top: 10px
 			&:nth-child(2)
 				padding-right: 0
@@ -117,7 +129,37 @@
 					&:before
 						opacity: 1
 						
+	&__map-wrap
+		position: absolute
+		top: -70px
+		left: 5px
+		+md
+			position: relative
+			top: 1px
+			left: 1px
+			width: calc(597px - 2px)
 	&__map
-		width: 597px
-		height: 437px
-		background-color: #cccccc
+		width: calc(597px - 2px)
+		height: calc(437px - 2px)
+		.gm-bundled-control
+			transform: translate(-40px, 15px)
+		&-mask
+			pointer-events: none
+			background: transparent url('../img/map-mask.png') center center no-repeat
+			background-size: cover
+			position: absolute
+			top: -1px
+			left: -1px
+			right: -1px
+			bottom: -1px
+			z-index: 2
+			&-jelly
+				+ratio-in
+				+cover-img
+			&-mouse
+				+ratio-in
+				svg
+					width: 100%
+					height: 100%
+				path
+					pointer-events: auto
