--- a/src/styles/pages/home/advantage.sass
+++ b/src/styles/pages/home/advantage.sass
@@ -109,9 +109,11 @@
 				padding-top: 4px
 				font-size: 67px
 				flex: 1 0 95px
+				max-width: 95px
 				+sm
 					font-size: 47px
 					flex-basis: 66px
+					max-width: 66px
 				.icon
 					display: block
 					&-advantage
