--- a/src/template/pages/home/how.pug
+++ b/src/template/pages/home/how.pug
@@ -2,7 +2,7 @@
 	+b.chat.__chat#chat
 		+e.container.container
 			+e.icon-bot
-				+i('bot')
+				img(src='static/img/bot.svg' alt='image')
 			+e.close-btn
 				+e.close-icon
 					+i('close')
