--- a/src/styles/pages/home/chat.sass
+++ b/src/styles/pages/home/chat.sass
@@ -27,7 +27,6 @@
 		display: flex
 		align-items: center
 		justify-content: center
-		font-size: 23px
 		width: 40px
 		height: 40px
 		background-color: $color6
@@ -36,9 +35,17 @@
 		+sm
 			width: 22px
 			height: 22px
-			font-size: 10px
 			right: auto
 			left: 20px
+		img
+			position: relative
+			left: -1px
+			width: 23px
+			height: 23px
+			+sm
+				left: 0
+				width: 10px
+				height: 10px
 	
 	&__close
 		&-btn
