--- a/src/styles/components/footer.sass
+++ b/src/styles/components/footer.sass
@@ -46,7 +46,7 @@
 			
 	&__round-contacts-top
 		z-index: 1
-		top: 0
+		top: -1px
 		left: 0
 		right: 0
 		+ratio(1280,77)
@@ -75,6 +75,9 @@
 		padding: 5px 10px
 		+sm
 			display: block
+	&_contacts &__mobile-top
+		top: auto
+		bottom: 40px
 	
 	&__title
 		margin: 0 auto
@@ -276,6 +279,8 @@
 		padding-top: 202px
 		+mac
 			padding-top: 102px
+		+sm
+			padding-top: 60px
 		&-logo
 			position: absolute
 			right: 0
@@ -283,6 +288,25 @@
 			width: 414px
 			height: 446px
 			+cover-img
+			+sm
+				top: auto
+				bottom: 0
+				transform: scale(0.5)
+		&-content
+			&-show
+				position: absolute
+				top: 0
+				left: 0
+				right: 0
+				bottom: 0
+				opacity: 0
+				visibility: hidden
+				display: flex
+				align-items: center
+				justify-content: flex-start
+				+h2
+				.container
+					width: 100%
 			
 		&-title
 			+h2
@@ -291,3 +315,5 @@
 			max-width: 720px
 			&:not(:first-child)
 				margin-top: 69px
+				+sm
+					margin-top: 40px
