--- a/src/styles/components/header.sass
+++ b/src/styles/components/header.sass
@@ -51,7 +51,8 @@
 				opacity: 0
 				.is-sub &
 					opacity: 1
-		.is-sub &.is-menu &-img
+		.is-sub &.is-menu &-img,
+		#{$parent}.is-fixed &-img
 			&:nth-child(1)
 				opacity: 1
 			&:nth-child(2)
@@ -216,6 +217,8 @@
 			color: $color7
 			&.is-menu
 				color: $color6
+		#{$parent}.is-fixed &
+			color: $color6
 		+sm
 			+f('MullerMedium',14,32,0)
 			margin-top: -18px
@@ -283,6 +286,8 @@
 		color: $color6
 		.is-sub &
 			color: $color7
+		#{$parent}.is-fixed &
+			color: $color6
 		+md
 			display: block
 		+sm
