--- a/src/template/pages/home/example.pug
+++ b/src/template/pages/home/example.pug
@@ -46,7 +46,13 @@
 							+e.slider-chat
 								+e.slider-chat-text(href='#!' target='_blank' data-text-mobile='Поговорить с этим ботом') Поговорить с ботом
 								+e.slider-chat-icon(href='#!' target='_blank')
-									+i('telegram')
+									.
+										<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+										<style type="text/css">.st0{fill:#DB285E;}.st1{fill:#FCFCFC;}.st2{fill:#D8D7DA;}</style>
+										<circle cx="256" cy="256" r="256"/>
+										<path class="st1" d="M164.7,311.1l-82.6-41.3c-2.3-1.1-2.3-4.4,0-5.5l313.7-162.2c2.3-1.2,5,0.8,4.5,3.4l-54,270c-0.4,1.9-2.4,3-4.3,2.2l-73.4-31.5c-0.9-0.4-1.9-0.3-2.7,0.1L171,399.1c-2.1,1.1-4.6-0.3-4.6-2.7v-82.5C166.4,312.7,165.7,311.7,164.7,311.1z"/>
+										<path class="st2" d="M200.3,339l-0.5-82.4c0-0.5,0.3-1,0.7-1.3l133.9-81.8c1.5-0.9,3.1,1.1,1.9,2.3L234.4,278.4c-0.1,0.1-0.2,0.2-0.3,0.4l-17.4,34.9l-13.5,26C202.4,341,200.3,340.5,200.3,339z"/>
+										</svg>
 								+e.slider-chat-icon(href='#!' target='_blank')
 									+i('facebook')
 						+e.slider-right
