--- a/src/styles/pages/home/example.sass
+++ b/src/styles/pages/home/example.sass
@@ -108,8 +108,7 @@
 				+h4
 				color: $color2
 				+trs
-				&.is-active,
-				.no-touch &:hover
+				&.is-active
 					color: $color4
 			&-icon
 				position: relative
@@ -127,8 +126,6 @@
 					color: $color4
 					svg
 						fill: $color4
-			.no-touch &-text:hover + &-icon
-				color: $color4
 		&-btn
 			position: absolute
 			z-index: 10
