--- a/src/template/pages/home/example.pug
+++ b/src/template/pages/home/example.pug
@@ -24,7 +24,7 @@
 									path(d="M393,179.6v5.2C393,183.1,393,181.3,393,179.6z")
 									path(d="M333.6,340c-39.4,28.4-144.5,51.2-246,15C-17.4,317.5-13,184.3,23.3,120.5C59.7,56.3,50.1,0.2,113.6,0c63.8-0.2,87.8,16.4,186.5,8.9c57.2-4.3,92.4,82.6,93,170.7V0H0v373.7h393V184.8C392.7,247.9,374.3,310.7,333.6,340z")
 							+e.slider-chat
-								+e.slider-chat-text(href='#!' target='_blank' data-text-mobile='Поговорить с этим ботом') Поговорить с ботом
+								+e.P.slider-chat-text(data-text-mobile='Поговорить с этим ботом') Поговорить с ботом
 								+e.slider-chat-icon(href='#!' target='_blank')
 									+i('telegram')
 								+e.slider-chat-icon(href='#!' target='_blank')
@@ -44,7 +44,7 @@
 									path(d="M393,179.6v5.2C393,183.1,393,181.3,393,179.6z")
 									path(d="M333.6,340c-39.4,28.4-144.5,51.2-246,15C-17.4,317.5-13,184.3,23.3,120.5C59.7,56.3,50.1,0.2,113.6,0c63.8-0.2,87.8,16.4,186.5,8.9c57.2-4.3,92.4,82.6,93,170.7V0H0v373.7h393V184.8C392.7,247.9,374.3,310.7,333.6,340z")
 							+e.slider-chat
-								+e.slider-chat-text(href='#!' target='_blank' data-text-mobile='Поговорить с этим ботом') Поговорить с ботом
+								+e.P.slider-chat-text(data-text-mobile='Поговорить с этим ботом') Поговорить с ботом
 								+e.slider-chat-icon(href='#!' target='_blank')
 									.
 										<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
@@ -68,7 +68,7 @@
 									path(d="M393,179.6v5.2C393,183.1,393,181.3,393,179.6z")
 									path(d="M333.6,340c-39.4,28.4-144.5,51.2-246,15C-17.4,317.5-13,184.3,23.3,120.5C59.7,56.3,50.1,0.2,113.6,0c63.8-0.2,87.8,16.4,186.5,8.9c57.2-4.3,92.4,82.6,93,170.7V0H0v373.7h393V184.8C392.7,247.9,374.3,310.7,333.6,340z")
 							+e.slider-chat
-								+e.slider-chat-text(href='#!' target='_blank' data-text-mobile='Поговорить с этим ботом') Поговорить с ботом
+								+e.P.slider-chat-text(data-text-mobile='Поговорить с этим ботом') Поговорить с ботом
 								+e.slider-chat-icon(href='#!' target='_blank')
 									+i('telegram')
 								+e.slider-chat-icon(href='#!' target='_blank')
