--- a/src/template/extend/default.pug
+++ b/src/template/extend/default.pug
@@ -33,6 +33,7 @@ html(lang='ru')
 					document.createElement('picture');
 
 			// Preloader
+			//if homePage
 			include ../components/preloader
 
 			// Header
